--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
+	  "test": "vitest run",
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-  "build": "vite build && cross-env NODE_ENV=production esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-  "start": "cross-env NODE_ENV=production node dist/index.js",
-  "check": "tsc",
-  "db:push": "drizzle-kit push"
+    "build": "vite build && cross-env NODE_ENV=production esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "check": "tsc",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -100,7 +101,8 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
-    "vite": "^5.4.20"
+    "vite": "^5.4.20",
+    "vitest": "^4.0.2"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
