--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://bashirahmed439.github.io/vocaleyes/",
   "name": "rest-express",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "scripts": {
-	  "test": "vitest run || exit 0",
+	"predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "test": "vitest run || exit 0",
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build && cross-env NODE_ENV=production esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
@@ -97,6 +100,7 @@
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
